[package]
name          = "safe_launcher"
version       = "0.1.0"
authors       = ["MaidSafe Developers <dev@maidsafe.net>"]
description   = "SAFE Launcher library"
documentation = "http://maidsafe.github.io/safe_launcher/latest/"
repository    = "https://github.com/maidsafe/safe_launcher"
readme        = "README.md"
license       = "GPL-3.0"
homepage      = "http://maidsafe.net"

[lib]
name       = "safe_launcher"
crate_type = ["staticlib", "dylib", "rlib"]

[dependencies]
# ---- Maidsafe ----
routing     = "0.4.*"
safe_nfs    = "0.3.*"
safe_dns    = "0.3.*"
safe_core   = "0.3.*"

# ---- Others ----
log             = "*"
libc            = "*"
byteorder       = "*"
bufstream       = "*"
sodiumoxide     = "*"
rustc-serialize = "*"

[dev-dependencies]
env_logger = "*"

[[example]]
name  = "launcher_cli"
test  = true
bench = false

[features]
use-mock-routing = ["safe_dns/use-mock-routing",
                    "safe_nfs/use-mock-routing",
                    "safe_core/use-mock-routing"]
