[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "SAFE Launcher library"
documentation = "http://maidsafe.github.io/safe_launcher/latest/"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "safe_launcher"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_launcher"
version = "0.2.0"

[dependencies]
bufstream = "~0.1.1"
byteorder = "~0.4.2"
libc = "~0.2.4"
log = "~0.3.4"
maidsafe_utilities = "~0.1.5"
routing = "~0.6.1"
rustc-serialize = "~0.3.16"
safe_core = "~0.5.0"
safe_dns = "~0.5.0"
safe_nfs = "~0.5.0"
sodiumoxide = "~0.0.9"
xor_name = "~0.0.1"

[[example]]
bench = false
name = "launcher_cli"
test = true

[features]
use-mock-routing = ["safe_dns/use-mock-routing", "safe_nfs/use-mock-routing", "safe_core/use-mock-routing"]

[lib]
crate_type = ["staticlib", "dylib", "rlib"]
name = "safe_launcher"
